fix(MobileUI): more intuitive layout of security center on mobile

--- a/assets/css/blockchain.css.scss
+++ b/assets/css/blockchain.css.scss
@@ -86,6 +86,18 @@ html,body {
 
 .invisible { visibility: hidden; opacity: 0; }
 
+.hidden-phone {
+   @media (max-width: 768px) {
+      display: none !important;
+   }
+}
+
+.hidden-desktop {
+   @media (min-width: 769px) {
+      display: none !important;
+   }
+}
+
 .height-100 { height: 100%; }
 .width-100 { width: 100%; }
 .width-50 { width: 50%; }
