--- a/assets/css/utilities/_legacy.scss
+++ b/assets/css/utilities/_legacy.scss
@@ -15,18 +15,6 @@
 .legacy {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
 
-   .hidden-phone {
-      @media (max-width: 768px) {
-         display: none !important;
-      }
-   }
-
-   .hidden-desktop {
-      @media (min-width: 769px) {
-         display: none !important;
-      }
-   }
-
    .container {
       width: auto;
       min-width: 300px;
